<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.recorridocafetero.ui.list.ListFragment"
        android:label="@string/vista"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_detailFragment2"
            app:destination="@id/navigation_detail" />
        <action
            android:id="@+id/action_listFragment_to_settingsFragment"
            app:destination="@id/navigation_preference" />
    </fragment>
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.recorridocafetero.ui.detail.DetailFragment"
        android:label="@string/lugar"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="lugar"
            app:argType="com.example.recorridocafetero.model.LugarItem" />
    </fragment>
    <fragment
        android:id="@+id/navigation_preference"
        android:name="com.example.recorridocafetero.ui.preference.SettingsFragment"
        android:label="@string/configuracion" />
</navigation>